project_sources/collector/fixtures/powershell_analysis/good/custom_source_part_current.ps1
$Report = [pscustomobject]@{
    GeneratedOutputHash = "current"
    SourcePartHash = "current"
}
Write-Output ($Report | ConvertTo-Json)
