project_sources/collector/fixtures/powershell_analysis/bad/plaintext_password.ps1
function Invoke-DcoirPlaintextPasswordFixture {
    param([string]$Password = "HardCodedFixturePassword!")
    Write-Output $Password.Length
}
